# svg-matrix-python

./: .gitignore  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/: embed_google_fonts.py
scripts/: pre-push  setup-hooks.sh
src/svg_matrix/: __init__.py  _runtime.py  cli.py  library.py  validation.py
tests/: test_conversion.py  test_optimization.py  test_validation.py
